@@ -2,15 +2,10 @@
  * Copyright (c) 2015-2017, Antonio Gabriel Muñoz Conejo <antoniogmc at gmail dot com>
  * Distributed under the terms of the MIT License
  */
-
 package com.github.tonivade.tinydb.command.list;
 
 import static com.github.tonivade.tinydb.data.DatabaseKey.safeKey;
 import static com.github.tonivade.tinydb.data.DatabaseValue.list;
-import static java.util.stream.Collectors.toList;
-
-import java.util.LinkedList;
-import java.util.List;
 
 import com.github.tonivade.resp.annotation.Command;
 import com.github.tonivade.resp.annotation.ParamLength;
@@ -20,8 +15,11 @@ import com.github.tonivade.resp.protocol.SafeString;
 import com.github.tonivade.tinydb.command.TinyDBCommand;
 import com.github.tonivade.tinydb.command.annotation.ParamType;
 import com.github.tonivade.tinydb.data.DataType;
-import com.github.tonivade.tinydb.data.DatabaseValue;
 import com.github.tonivade.tinydb.data.Database;
+import com.github.tonivade.tinydb.data.DatabaseValue;
+
+import io.vavr.collection.List;
+import io.vavr.collection.Stream;
 
 @Command("lpush")
 @ParamLength(2)
@@ -30,17 +28,11 @@ public class LeftPushCommand implements TinyDBCommand {
 
   @Override
   public RedisToken execute(Database db, Request request) {
-    List<SafeString> values = request.getParams().stream().skip(1).collect(toList());
+    List<SafeString> values = Stream.ofAll(request.getParams()).tail().reverse().toList();
 
     DatabaseValue result = db.merge(safeKey(request.getParam(0)), list(values),
-        (oldValue, newValue) -> {
-          List<SafeString> merge = new LinkedList<>();
-          merge.addAll(newValue.getValue());
-          merge.addAll(oldValue.getValue());
-          return list(merge);
-        });
+        (oldValue, newValue) -> list(newValue.getList().appendAll(oldValue.getList())));
 
-    return RedisToken.integer(result.<List<SafeString>>getValue().size());
+    return RedisToken.integer(result.size());
   }
-
 }
